--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "node-red-contrib-sox-record",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "a node-red wrapper for the sox commandline record functionality",
   "author": "Johannes Kropf",
   "license": "Apache-2.0",
+  "repository": {
+       "type": "git",
+       "url": "https://github.com/johanneskropf/node-red-contrib-sox-record.git"
+  },
   "node-red": {
         "nodes": {
             "sox-record": "sox_record.js"
