--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "node-red-contrib-sox-record",
-  "version": "0.1.3",
-  "description": "a node-red wrapper for the sox commandline record functionality",
+  "name": "node-red-contrib-sox-utils",
+  "version": "0.1.4",
+  "description": "a node-red wrapper for some of the sox commandline utils functionality",
   "author": "Johannes Kropf",
   "license": "Apache-2.0",
   "repository": {
        "type": "git",
-       "url": "https://github.com/johanneskropf/node-red-contrib-sox-record.git"
+       "url": "https://github.com/johanneskropf/node-red-contrib-sox-utils.git"
   },
   "node-red": {
         "nodes": {
-            "sox-record": "sox_record.js"
+            "sox-record": "sox_record.js",
+            "sox-play": "sox_play.js"
         }
     }
 }
