--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-sox-utils",
-  "version": "0.1.5",
-  "description": "a node-red wrapper for some of the sox commandline utils functionality",
+  "version": "0.1.6",
+  "description": "a node-red wrapper for some of the sox commandline utils play and record functionality",
   "author": "Johannes Kropf",
   "license": "Apache-2.0",
   "repository": {
