--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-sox-utils",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "a node-red wrapper for some of the sox commandline utils play and record functionality",
   "author": "Johannes Kropf",
   "license": "Apache-2.0",
@@ -22,7 +22,8 @@
   "node-red": {
         "nodes": {
             "sox-record": "sox_record.js",
-            "sox-play": "sox_play.js"
+            "sox-play": "sox_play.js",
+            "sox-convert": "sox_convert.js"
         }
     }
 }
